--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
