--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "npm start --prefix client && npm start --prefix server",
+		"start": "concurrently \"npm start --prefix client\" \"npm start --prefix server\"",
+		"install": "npm i --prefix client && npm i --prefix server",
+		"dev": "concurrently \"npm start --prefix client\" \"npm run dev --prefix server\"",
 		"client": "npm start --prefix client",
 		"server": "npm start --prefix server",
 		"test": "echo \"Error: no test specified\" && exit 1"
