--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
+		"boring-avatars": "^1.5.5",
+		"jwt-decode": "^3.1.2",
 		"react": "^17.0.2",
 		"react-auth-kit": "^1.4.10-0",
 		"react-dom": "^17.0.2",
 		"react-hot-toast": "^2.0.0",
-		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"web-vitals": "^1.0.1"
 	},
