--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
-		"body-parser": "^1.19.0",
+		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
